css.sass/_variables.scss
// -- FONTS -- //
$base-font-family: museo-sans-rounded,  "Helvetica Neue",  Verdana,  sans-serif;;
$header-font-family: $base-font-family;

// -- COLORS -- //
$base-font-color: #2d2d2d;
$header-font-color: $base-font-color;
$link-font-color: $base-font-color;
$link-hover-font-color: #e6262d;

// -- IMAGES -- //
$logo: url(../images/ryanklimt-logo.png);
$small-logo: url(../images/ryanklimt-icon.png);
$background: url(../images/html.jpg);

